# cudaway

./: .gitignore  AI_REFERENCE.md  CMakeLists.txt  NEXT_STEPS.md  README.md  pyproject.toml
cmake/: HipWindowsWorkarounds.cmake
cmake/toolchains/: windows-hip.cmake
cuda_tests/: 01_device_query.cu  02_vector_add.cu  03_shared_memory_reduction.cu  04_matrix_mul_tiled.cu  README.md  common.hpp
src/: main.cpp
src/common/: HandleTable.hpp  Types.hpp
src/device/: PtxCompiler.cpp  PtxCompiler.hpp
src/host/: CudaDriverShim.cpp  CudaDriverShim.hpp  CudaDriverTypes.hpp  HostApiLayer.cpp  HostApiLayer.hpp
src/host/runtime/: RuntimeRegistry.cpp  RuntimeRegistry.hpp  RuntimeStubTable.generated.hpp
src/platform/: PlatformConfig.cpp  PlatformConfig.hpp
studies/: BASE_CONCEPT.md  CodeValidationAppleSilicon.md  FOUNDATIONS.md  LD_PRELOAD_PACKAGING.md  ROCm-API-LinuxVsWindows.md
studies/mappings/: CUDA_ROCM_Library_Mappings.md
tools/: README.md  __init__.py
tools/data/: cuda_rocm_driver_apis.json  cuda_runtime_mappings.json
tools/python/: __init__.py  cuda_rocm_api_generator.py  cuda_runtime_converter.py
tools/python/common/: __init__.py  pdf_utils.py
