[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "cudaway-tools"
version = "0.1.0"
description = "Utility scripts for CUDAway data ingestion and shim generation"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=6.1.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.package-data]
"tools" = ["data/*.json"]
